Java 8 doesn't have a PermGen anymore